--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
+    "jwt-decoder": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -16,6 +18,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "universal-cookie": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
